--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
